# qlever-ui

./: .dockerignore  .env  .env.template  .gitignore  Dockerfile  Makefile  README.md  end2end-test.py  manage.py  package-lock.json  package.json  pyproject.toml  qlever.Makefile  qlue-ls.yaml  requirements.txt  rollup.config.js  start.sh  vite.config.js  webpack.config.js
.github/workflows/: docker-publish.yml  ui-check.yml
backend/: admin.py  apps.py  forms.py  models.py  serializer.py  urls.py  views.py
backend/migrations/: 0001_initial.py  0002_backend_isdefault.py  0003_suggestions_synonyms.py  0004_auto_20170715_1104.py  0005_suggestion_scope.py  0006_entity_predicate.py  0007_auto_20170930_1010.py  0008_backend_isimporting.py  0009_auto_20171026_1327.py  0010_prefix.py  0011_prefix_occurrences.py  0012_auto_20171031_1116.py  0013_auto_20171031_1254.py  0014_auto_20171031_1304.py  0015_auto_20171202_1410.py  0016_backend_subjectorderrelation.py  0017_pattern.py  0018_auto_20171214_1425.py  (+63 more)
db/: .gitignore  qleverui.sqlite3
docs/: configure_qleverui.md  extending_parser.md  extending_suggestions.md  install_qleverui.md  json_results.md  query-analysis.md
formatter/: index.js
monaco_editor/: config.ts  keys.ts  languageServer.worker.ts  main.ts  qleverUI.ts  qleverUi.ts  style.css
panzoom/: index.js
qlever/: context_processor.py  settings.py  settings_secret.py  settings_secret_template.py  urls.py  wsgi.py
qlever_ui/: buttons.ts  main.ts
resources/: backend-sample.csv  examples-sample.csv  prefix-sample.csv
tests/: backends.csv  prefixes.csv
(+78 files in other folders)
